<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.rezak.magicsquare.Acceuil"
    >

    <Button
        android:id="@+id/nouv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="nouv"
        android:text="@string/nouv" />

    <Spinner
        android:id="@+id/Spin"
        android:layout_width="184dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:drawSelectorOnTop="true"
        android:entries="@array/array_name"/>

    <Button
        android:id="@+id/best"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/best"
        android:onClick="best"/>
    <Button
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="about"
        android:text="@string/about"
        />

</LinearLayout>
