<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.rezak.magicsquare.MainActivity">
    <TextView
        android:id="@+id/chronometer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/howTo"
        android:gravity="center"
        android:textSize="15sp"
        />


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="7"
        android:rowCount="8"
        android:useDefaultMargins="true"
        android:layout_marginBottom="20dp"

        >

        <EditText
            android:id="@+id/l0c0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/result"
            android:ems="2"
            android:textSize="25sp"
            android:maxLength="1"
            android:textAlignment="center"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/l0c1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="0"
            android:inputType="number"
            android:hint="@string/result"
            android:ems="2"
            android:textSize="25sp"
            android:maxLength="1"
            android:textAlignment="center"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/l0c2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="4"
            android:layout_row="0"
            android:inputType="number"
            android:hint="@string/result"
            android:ems="2"
            android:textSize="25sp"
            android:maxLength="1"
            android:textAlignment="center"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/l1c0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:inputType="number"
            android:hint="@string/result"
            android:textSize="25sp"
            android:ems="2"
            android:maxLength="1"
            android:textAlignment="center"
            android:layout_gravity="center"
            />

        <EditText
            android:id="@+id/l1c1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:textSize="25sp"
            android:layout_row="2"
            android:inputType="number"
            android:hint="@string/result"
            android:ems="2"
            android:maxLength="1"
            android:textAlignment="center"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/l1c2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="4"
            android:layout_row="2"
            android:inputType="number"
            android:hint="@string/result"
            android:ems="2"
            android:textSize="25sp"
            android:maxLength="1"
            android:textAlignment="center"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/l2c0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="4"
            android:inputType="number"
            android:hint="@string/result"
            android:ems="2"
            android:textSize="25sp"
            android:maxLength="1"
            android:textAlignment="center"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/l2c1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="4"
            android:inputType="number"
            android:hint="@string/result"
            android:ems="2"
            android:textSize="25sp"
            android:maxLength="1"
            android:textAlignment="center"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/l2c2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="4"
            android:layout_row="4"
            android:inputType="number"
            android:hint="@string/result"
            android:ems="2"
            android:textSize="25sp"
            android:maxLength="1"
            android:textAlignment="center"
            android:layout_gravity="center"/>


        <TextView
            android:id="@+id/tv0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"
            android:text="@string/add"
            android:textSize="25sp"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="0"
            android:text="@string/add"
            android:textSize="25sp"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="5"
            android:layout_row="0"
            android:text="@string/equal"
            android:textSize="25sp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"
            android:text="@string/add"
            android:textSize="25sp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="2"
            android:text="@string/add"
            android:textSize="25sp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tv5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="5"
            android:layout_row="2"
            android:text="@string/equal"
            android:textSize="25sp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tv6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="4"
            android:text="@string/add"
            android:textSize="25sp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tv7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="4"
            android:text="@string/add"
            android:textSize="25sp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tv8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="5"
            android:layout_row="4"
            android:text="@string/equal"
            android:textSize="25sp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tv9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/add"
            android:textSize="25sp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tv10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="1"
            android:text="@string/add"
            android:textSize="25sp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tv11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="4"
            android:layout_row="1"
            android:text="@string/add"
            android:textSize="25sp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tv12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/add"
            android:textSize="25sp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tv13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="3"
            android:text="@string/add"
            android:textSize="25sp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tv14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="4"
            android:layout_row="3"
            android:text="@string/add"
            android:textSize="25sp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tv15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="5"
            android:text="@string/equal"
            android:textSize="25sp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tv16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="5"
            android:text="@string/equal"
            android:textSize="25sp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tv17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="4"
            android:layout_row="5"
            android:text="@string/equal"
            android:textSize="25sp"
            android:layout_gravity="center"/>


        <TextView
            android:id="@+id/rc1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="6"
            android:layout_row="0"
            android:text="@string/unknown"
            android:textSize="25sp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/rc2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="6"
            android:layout_row="2"
            android:text="@string/unknown"
            android:textSize="25sp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/rc3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="6"
            android:layout_row="4"
            android:text="@string/unknown"
            android:textSize="25sp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/rl1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="6"
            android:text="@string/unknown"
            android:textSize="25sp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/rl2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="6"
            android:text="@string/unknown"
            android:textSize="25sp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/rl3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="4"
            android:layout_row="6"
            android:text="@string/unknown"
            android:textSize="25sp"
            android:layout_gravity="center"/>
    </GridLayout>
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="#123456" />
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:useDefaultMargins="true"
        android:columnCount="3"
        android:layout_margin="10dp"
        android:rowCount="3">

        <Button
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:onClick="submit"/>

        <Button
            android:id="@+id/cont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/contin"
            android:onClick="resume"/>
        <Button
            android:id="@+id/help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="1"
            android:text="@string/help"
            android:onClick="help"/>
        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="0"
            android:onClick="finishGame"
            android:text="@string/back" />
        <Chronometer
            android:id="@+id/chrno"
            android:layout_gravity="center"
            android:layout_column="1"
            android:layout_row="0"
            android:textSize="24dp"

            />


        <Space
            android:layout_row="0"
            android:layout_column="1"
            android:layout_width="80dp"
            android:layout_height="10dp" />
        <Space
            android:layout_row="1"
            android:layout_column="1"
            android:layout_width="80dp"
            android:layout_height="10dp" />

    </GridLayout>

</LinearLayout>
